[package]
name = "custom-metrics-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17.0", features = ["metrics", "rt-tokio"] }
tokio = { version = "1.17", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }