[package]
name = "grpc-type-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-build = { version = "0.6.2" }
prost-build = { version = "0.10" }
prost = { version = "0.10" }
protobuf-codegen = { version = "2.16" }
protoc-grpcio = { version = "3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"


