[package]
name = "jaeger-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
tokio = { version = "1.17", features = ["full"] }