[package]
name = "swap-tracer-provider-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.17", features = ["trace", "rt-tokio"] }
tokio = { version = "1.21.1", features = ["rt-multi-thread"] }
tracing-opentelemetry = "0.17.4"
opentelemetry-semantic-conventions = "0.9"
opentelemetry-otlp = { version = "0.10" }
anyhow = "1.0.65"
tracing-subscriber = "0.3.5"
tracing = "0.1.36"