[package]
name = "wrap-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-datadog = {version = "0.5.0", features = ["reqwest-client"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
tokio = { version = "1.17", features = ["full"] }
async-trait = "0.1.52"